--- a/index.html
+++ b/index.html
@@ -2,30 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OS One Ultimate</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-       /* SF Pro Display Font Fallback */
-      @font-face { font-family: 'SF Pro Display'; src: local('SF Pro Display'), local('San Francisco'); }
-      body { 
-        font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-        overflow: hidden;
-        background-color: #000;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "js-yaml": "https://aistudiocdn.com/js-yaml@^4.1.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
